@@ -4,26 +4,31 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
+import static org.mockito.internal.verification.VerificationModeFactory.times;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import pl.coderstrust.configuration.ApplicationConfiguration;
 import pl.coderstrust.configuration.InFileDatabaseProperties;
 import pl.coderstrust.generators.InvoiceGenerator;
 import pl.coderstrust.helpers.FileHelper;
@@ -39,49 +44,64 @@ class InFileDatabaseTest {
 
     private static ObjectMapper objectMapper;
 
-    private static String testPath = "src/test/resources/database/test.txt";
-    private static Invoice invoiceInFile = InvoiceGenerator.getRandomInvoice();
-
-    @BeforeAll
-    static void beforeLoading() {
-        objectMapper = new ObjectMapper();
-        objectMapper.registerModule(new JavaTimeModule());
-        objectMapper.configure(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS, false);
-    }
+    private static final String DATABASE_FILE = "invoice_database.txt";
 
     @BeforeEach
     void setup() throws IOException {
+        objectMapper = new ApplicationConfiguration().getObjectMapper();
         InFileDatabaseProperties inFileDatabasePropertiesTest = new InFileDatabaseProperties();
-        inFileDatabasePropertiesTest.setFilePath(testPath);
+        inFileDatabasePropertiesTest.setFilePath(DATABASE_FILE);
 
-        doReturn(true).when(fileHelper).exists(testPath);
-        doReturn(objectMapper.writeValueAsString(invoiceInFile)).when(fileHelper).readLastLine(testPath);
+        doReturn(false).when(fileHelper).exists(DATABASE_FILE);
 
         inFileDatabase = new InFileDatabase(inFileDatabasePropertiesTest, objectMapper, fileHelper);
-
-        verify(fileHelper).readLastLine(testPath);
-        verify(fileHelper).exists(testPath);
     }
 
     @Test
-    void shouldSaveInvoice() throws DatabaseOperationException, IOException {
-        Invoice invoiceToSave = InvoiceGenerator.getRandomInvoice();
+    void shouldAddInvoice() throws DatabaseOperationException, IOException {
+        Invoice invoiceToAdd = InvoiceGenerator.getRandomInvoice();
+        Invoice expectedInvoice = Invoice.builder()
+            .withId(1L)
+            .withNumber(invoiceToAdd.getNumber())
+            .withIssuedDate(invoiceToAdd.getIssuedDate())
+            .withDueDate(invoiceToAdd.getDueDate())
+            .withSeller(invoiceToAdd.getSeller())
+            .withBuyer(invoiceToAdd.getBuyer())
+            .withEntries(invoiceToAdd.getEntries())
+            .build();
+        List<String> invoicesInDatabase = new ArrayList<>();
+        invoicesInDatabase.add(objectMapper.writeValueAsString(InvoiceGenerator.getRandomInvoice()));
+        invoicesInDatabase.add(objectMapper.writeValueAsString(InvoiceGenerator.getRandomInvoice()));
+        doNothing().when(fileHelper).writeLine(DATABASE_FILE, objectMapper.writeValueAsString(expectedInvoice));
+        doReturn(invoicesInDatabase).when(fileHelper).readLines(DATABASE_FILE);
 
-        Invoice savedInvoice = inFileDatabase.save(invoiceToSave);
+        Invoice addedInvoice = inFileDatabase.save(invoiceToAdd);
 
-        verify(fileHelper).writeLine(testPath, objectMapper.writeValueAsString(savedInvoice));
-        assertEquals(invoiceInFile.getId() + 1, savedInvoice.getId());
+        assertEquals(expectedInvoice, addedInvoice);
+        verify(fileHelper).readLines(DATABASE_FILE);
+        verify(fileHelper).writeLine(DATABASE_FILE, objectMapper.writeValueAsString(addedInvoice));
     }
 
     @Test
     void shouldUpdateInvoice() throws DatabaseOperationException, IOException {
-        Invoice invoiceToUpdate = InvoiceGenerator.getRandomInvoiceWithSpecificId(invoiceInFile.getId());
-        doReturn(List.of(objectMapper.writeValueAsString(invoiceInFile))).when(fileHelper).readLines(testPath);
+        Invoice invoiceInDatabase = InvoiceGenerator.getRandomInvoice();
+        Invoice invoiceToUpdate = Invoice.builder()
+            .withId(invoiceInDatabase.getId())
+            .withNumber("123/456")
+            .withIssuedDate(invoiceInDatabase.getIssuedDate())
+            .withDueDate(invoiceInDatabase.getDueDate())
+            .withSeller(invoiceInDatabase.getSeller())
+            .withBuyer(invoiceInDatabase.getBuyer())
+            .withEntries(invoiceInDatabase.getEntries())
+            .build();
+        doReturn(List.of(objectMapper.writeValueAsString(invoiceInDatabase))).when(fileHelper).readLines(DATABASE_FILE);
+        doNothing().when(fileHelper).replaceLine(DATABASE_FILE, objectMapper.writeValueAsString(invoiceToUpdate), 1);
 
         Invoice updatedInvoice = inFileDatabase.save(invoiceToUpdate);
 
-        verify(fileHelper).replaceLine(testPath, objectMapper.writeValueAsString(updatedInvoice), 1);
-        assertEquals(invoiceToUpdate.getId(), updatedInvoice.getId());
+        assertEquals(invoiceToUpdate, updatedInvoice);
+        verify(fileHelper).replaceLine(DATABASE_FILE, objectMapper.writeValueAsString(updatedInvoice), 1);
+        verify(fileHelper, times(2)).readLines(DATABASE_FILE);
     }
 
     @Test
@@ -90,14 +110,55 @@ class InFileDatabaseTest {
     }
 
     @Test
-    void shouldDeleteInvoiceFromFile() throws DatabaseOperationException, IOException {
-        Invoice invoiceToDelete = invoiceInFile;
-        doReturn(List.of(objectMapper.writeValueAsString(invoiceInFile))).when(fileHelper).readLines(testPath);
-        doNothing().when(fileHelper).removeLine(testPath, 1);
+    void saveMethodShouldThrowExceptionWhenFileHelpersWriteLineMethodThrowsException() throws IOException {
+        Invoice invoiceToAdd = InvoiceGenerator.getRandomInvoice();
+        Invoice expectedInvoice = Invoice.builder()
+            .withId(1L)
+            .withNumber(invoiceToAdd.getNumber())
+            .withIssuedDate(invoiceToAdd.getIssuedDate())
+            .withDueDate(invoiceToAdd.getDueDate())
+            .withSeller(invoiceToAdd.getSeller())
+            .withBuyer(invoiceToAdd.getBuyer())
+            .withEntries(invoiceToAdd.getEntries())
+            .build();
+        doReturn(List.of(objectMapper.writeValueAsString(InvoiceGenerator.getRandomInvoice()))).when(fileHelper).readLines(DATABASE_FILE);
+        doThrow(IOException.class).when(fileHelper).writeLine(DATABASE_FILE, objectMapper.writeValueAsString(expectedInvoice));
+
+        assertThrows(DatabaseOperationException.class, () -> inFileDatabase.save(invoiceToAdd));
+        verify(fileHelper).readLines(DATABASE_FILE);
+        verify(fileHelper).writeLine(DATABASE_FILE, objectMapper.writeValueAsString(expectedInvoice));
+    }
+
+    @Test
+    void saveMethodShouldThrowExceptionWhenFileHelpersReplaceLineMethodThrowsException() throws IOException {
+        Invoice invoiceInDatabase = InvoiceGenerator.getRandomInvoice();
+        Invoice invoiceToUpdate = Invoice.builder()
+            .withId(invoiceInDatabase.getId())
+            .withNumber("123/456")
+            .withIssuedDate(invoiceInDatabase.getIssuedDate())
+            .withDueDate(invoiceInDatabase.getDueDate())
+            .withSeller(invoiceInDatabase.getSeller())
+            .withBuyer(invoiceInDatabase.getBuyer())
+            .withEntries(invoiceInDatabase.getEntries())
+            .build();
+        doReturn(List.of(objectMapper.writeValueAsString(invoiceInDatabase))).when(fileHelper).readLines(DATABASE_FILE);
+        doThrow(IOException.class).when(fileHelper).replaceLine(DATABASE_FILE, objectMapper.writeValueAsString(invoiceToUpdate), 1);
+
+        assertThrows(DatabaseOperationException.class, () -> inFileDatabase.save(invoiceToUpdate));
+        verify(fileHelper, times(2)).readLines(DATABASE_FILE);
+        verify(fileHelper).replaceLine(DATABASE_FILE, objectMapper.writeValueAsString(invoiceToUpdate), 1);
+    }
+
+    @Test
+    void shouldDeleteInvoice() throws DatabaseOperationException, IOException {
+        Invoice invoiceToDelete = InvoiceGenerator.getRandomInvoice();
+        doReturn(List.of(objectMapper.writeValueAsString(invoiceToDelete))).when(fileHelper).readLines(DATABASE_FILE);
+        doNothing().when(fileHelper).removeLine(DATABASE_FILE, 1);
 
         inFileDatabase.delete(invoiceToDelete.getId());
 
-        verify(fileHelper).removeLine(testPath, 1);
+        verify(fileHelper).readLines(DATABASE_FILE);
+        verify(fileHelper).removeLine(DATABASE_FILE, 1);
     }
 
     @Test
@@ -107,33 +168,46 @@ class InFileDatabaseTest {
 
     @Test
     void deleteMethodShouldThrowExceptionForNonExistingInvoice() throws IOException {
-        Invoice invoiceToDelete = InvoiceGenerator.getRandomInvoiceWithSpecificId(2L);
-        doReturn(List.of(objectMapper.writeValueAsString(invoiceInFile))).when(fileHelper).readLines(testPath);
+        Invoice invoice = InvoiceGenerator.getRandomInvoice();
+        doReturn(List.of(objectMapper.writeValueAsString(invoice))).when(fileHelper).readLines(DATABASE_FILE);
+
+        assertThrows(DatabaseOperationException.class, () -> inFileDatabase.delete(invoice.getId() + 1L));
+        verify(fileHelper).readLines(DATABASE_FILE);
+        verify(fileHelper, never()).removeLine(anyString(), anyInt());
+    }
+
+    @Test
+    void deleteMethodShouldThrowExceptionWhenFileHelperThrowsException() throws IOException {
+        Invoice invoiceToDelete = InvoiceGenerator.getRandomInvoice();
+        doReturn(List.of(objectMapper.writeValueAsString(invoiceToDelete))).when(fileHelper).readLines(DATABASE_FILE);
+        doThrow(IOException.class).when(fileHelper).removeLine(DATABASE_FILE, 1);
 
         assertThrows(DatabaseOperationException.class, () -> inFileDatabase.delete(invoiceToDelete.getId()));
+        verify(fileHelper).readLines(DATABASE_FILE);
+        verify(fileHelper).removeLine(DATABASE_FILE, 1);
     }
 
     @Test
-    void shouldGetInvoiceById() throws DatabaseOperationException, IOException {
-        Invoice invoiceToGet = InvoiceGenerator.getRandomInvoiceWithSpecificId(5L);
-        doReturn(List.of(objectMapper.writeValueAsString(invoiceInFile), objectMapper.writeValueAsString(invoiceToGet))).when(fileHelper).readLines(testPath);
-
-        Optional<Invoice> optionalInvoice = inFileDatabase.getById(5L);
-
-        verify(fileHelper).readLines(testPath);
-        assertTrue(optionalInvoice.isPresent());
-        assertEquals(invoiceToGet, optionalInvoice.get());
-    }
-
-    @Test
-    void shouldReturnEmptyOptionalForNonExistingInvoice() throws IOException, DatabaseOperationException {
-        Invoice invoiceToGet = InvoiceGenerator.getRandomInvoiceWithSpecificId(5L);
-        doReturn(List.of(objectMapper.writeValueAsString(invoiceInFile))).when(fileHelper).readLines(testPath);
+    void shouldReturnInvoiceById() throws DatabaseOperationException, IOException {
+        Invoice invoiceToGet = InvoiceGenerator.getRandomInvoice();
+        doReturn(List.of(objectMapper.writeValueAsString(InvoiceGenerator.getRandomInvoice()), objectMapper.writeValueAsString(invoiceToGet))).when(fileHelper).readLines(DATABASE_FILE);
 
         Optional<Invoice> optionalInvoice = inFileDatabase.getById(invoiceToGet.getId());
 
-        verify(fileHelper).readLines(testPath);
+        assertTrue(optionalInvoice.isPresent());
+        assertEquals(invoiceToGet, optionalInvoice.get());
+        verify(fileHelper).readLines(DATABASE_FILE);
+    }
+
+    @Test
+    void shouldReturnEmptyOptionalWhenGettingNonExistingInvoiceById() throws IOException, DatabaseOperationException {
+        Invoice invoice = InvoiceGenerator.getRandomInvoice();
+        doReturn(List.of(objectMapper.writeValueAsString(invoice))).when(fileHelper).readLines(DATABASE_FILE);
+
+        Optional<Invoice> optionalInvoice = inFileDatabase.getById(invoice.getId() + 1L);
+
         assertTrue(optionalInvoice.isEmpty());
+        verify(fileHelper).readLines(DATABASE_FILE);
     }
 
     @Test
@@ -142,26 +216,35 @@ class InFileDatabaseTest {
     }
 
     @Test
-    void shouldGetInvoiceByNumber() throws DatabaseOperationException, IOException {
-        Invoice invoiceToGet = InvoiceGenerator.getRandomInvoiceWithSpecificId(5L);
-        doReturn(List.of(objectMapper.writeValueAsString(invoiceInFile), objectMapper.writeValueAsString(invoiceToGet))).when(fileHelper).readLines(testPath);
+    void getByIdMethodShouldThrowExceptionWhenFileHelperThrowsException() throws IOException {
+        Invoice invoiceToGet = InvoiceGenerator.getRandomInvoice();
+        doThrow(IOException.class).when(fileHelper).readLines(DATABASE_FILE);
+
+        assertThrows(DatabaseOperationException.class, () -> inFileDatabase.getById(invoiceToGet.getId()));
+        verify(fileHelper).readLines(DATABASE_FILE);
+    }
+
+    @Test
+    void shouldReturnInvoiceByNumber() throws DatabaseOperationException, IOException {
+        Invoice invoiceToGet = InvoiceGenerator.getRandomInvoice();
+        doReturn(List.of(objectMapper.writeValueAsString(InvoiceGenerator.getRandomInvoice()), objectMapper.writeValueAsString(invoiceToGet))).when(fileHelper).readLines(DATABASE_FILE);
 
         Optional<Invoice> optionalInvoice = inFileDatabase.getByNumber(invoiceToGet.getNumber());
 
-        verify(fileHelper).readLines(testPath);
         assertTrue(optionalInvoice.isPresent());
         assertEquals(invoiceToGet, optionalInvoice.get());
+        verify(fileHelper).readLines(DATABASE_FILE);
     }
 
     @Test
     void shouldReturnEmptyOptionalWhenGettingNonExistingInvoiceByNumber() throws IOException, DatabaseOperationException {
-        Invoice invoiceToGet = InvoiceGenerator.getRandomInvoiceWithSpecificId(5L);
-        doReturn(List.of(objectMapper.writeValueAsString(invoiceInFile))).when(fileHelper).readLines(testPath);
+        Invoice invoice = InvoiceGenerator.getRandomInvoice();
+        doReturn(List.of(objectMapper.writeValueAsString(invoice))).when(fileHelper).readLines(DATABASE_FILE);
 
-        Optional<Invoice> optionalInvoice = inFileDatabase.getByNumber(invoiceToGet.getNumber());
+        Optional<Invoice> optionalInvoice = inFileDatabase.getByNumber(invoice.getNumber() + "sd");
 
-        verify(fileHelper).readLines(testPath);
         assertTrue(optionalInvoice.isEmpty());
+        verify(fileHelper).readLines(DATABASE_FILE);
     }
 
     @Test
@@ -170,46 +253,82 @@ class InFileDatabaseTest {
     }
 
     @Test
-    void shouldGetAllInvoices() throws IOException, DatabaseOperationException {
-        Invoice additionalInvoice = InvoiceGenerator.getRandomInvoiceWithSpecificId(5L);
-        List<Invoice> expected = Arrays.asList(invoiceInFile, additionalInvoice);
-        doReturn(List.of(objectMapper.writeValueAsString(invoiceInFile), objectMapper.writeValueAsString(additionalInvoice))).when(fileHelper).readLines(testPath);
+    void getByNumberMethodShouldThrowExceptionWhenFileHelperThrowsException() throws IOException {
+        Invoice invoiceToGet = InvoiceGenerator.getRandomInvoice();
+        doThrow(IOException.class).when(fileHelper).readLines(DATABASE_FILE);
+
+        assertThrows(DatabaseOperationException.class, () -> inFileDatabase.getByNumber(invoiceToGet.getNumber()));
+        verify(fileHelper).readLines(DATABASE_FILE);
+    }
+
+    @Test
+    void shouldReturnAllInvoices() throws IOException, DatabaseOperationException {
+        Invoice invoice1 = InvoiceGenerator.getRandomInvoice();
+        Invoice invoice2 = InvoiceGenerator.getRandomInvoice();
+        List<Invoice> expected = Arrays.asList(invoice1, invoice2);
+        doReturn(List.of(objectMapper.writeValueAsString(invoice1), objectMapper.writeValueAsString(invoice2))).when(fileHelper).readLines(DATABASE_FILE);
 
         Collection<Invoice> result = inFileDatabase.getAll();
 
-        verify(fileHelper).readLines(testPath);
         assertEquals(expected, result);
+        verify(fileHelper).readLines(DATABASE_FILE);
+    }
+
+    @Test
+    void getAllMethodShouldReturnEmptyListWhenDatabaseIsEmpty() throws IOException, DatabaseOperationException {
+        doReturn(Collections.emptyList()).when(fileHelper).readLines(DATABASE_FILE);
+
+        Collection<Invoice> result = inFileDatabase.getAll();
+
+        assertEquals(Collections.emptyList(), result);
+        verify(fileHelper).readLines(DATABASE_FILE);
+    }
+
+    @Test
+    void getAllMethodShouldThrowExceptionWhenFileHelperThrowsException() throws IOException {
+        doThrow(IOException.class).when(fileHelper).readLines(DATABASE_FILE);
+
+        assertThrows(DatabaseOperationException.class, () -> inFileDatabase.getAll());
+        verify(fileHelper).readLines(DATABASE_FILE);
     }
 
     @Test
     void shouldDeleteAllInvoices() throws IOException, DatabaseOperationException {
-        doNothing().when(fileHelper).clear(testPath);
+        doNothing().when(fileHelper).clear(DATABASE_FILE);
 
         inFileDatabase.deleteAll();
 
-        verify(fileHelper).clear(testPath);
+        verify(fileHelper).clear(DATABASE_FILE);
     }
 
     @Test
-    void shouldReturnTrueForExistingInvoice() throws IOException, DatabaseOperationException {
-        Invoice existingInvoice = invoiceInFile;
-        doReturn(List.of(objectMapper.writeValueAsString(invoiceInFile))).when(fileHelper).readLines(testPath);
+    void deleteAllMethodShouldThrowExceptionWhenFileHelperThrowsException() throws IOException {
+        doThrow(IOException.class).when(fileHelper).clear(DATABASE_FILE);
 
-        boolean result = inFileDatabase.exists(existingInvoice.getId());
+        assertThrows(DatabaseOperationException.class, () -> inFileDatabase.deleteAll());
+        verify(fileHelper).clear(DATABASE_FILE);
+    }
 
-        verify(fileHelper).readLines(testPath);
+    @Test
+    void shouldReturnTrueWhenInvoiceExists() throws IOException, DatabaseOperationException {
+        Invoice invoice = InvoiceGenerator.getRandomInvoice();
+        doReturn(List.of(objectMapper.writeValueAsString(invoice))).when(fileHelper).readLines(DATABASE_FILE);
+
+        boolean result = inFileDatabase.exists(invoice.getId());
+
         assertTrue(result);
+        verify(fileHelper).readLines(DATABASE_FILE);
     }
 
     @Test
-    void shouldReturnFalseForNonExistingInvoice() throws IOException, DatabaseOperationException {
-        Invoice nonExistingInvoice = InvoiceGenerator.getRandomInvoiceWithSpecificId(5L);
-        doReturn(List.of(objectMapper.writeValueAsString(invoiceInFile))).when(fileHelper).readLines(testPath);
+    void shouldReturnFalseWhenInvoiceDoesNotExist() throws IOException, DatabaseOperationException {
+        Invoice invoice = InvoiceGenerator.getRandomInvoice();
+        doReturn(List.of(objectMapper.writeValueAsString(invoice))).when(fileHelper).readLines(DATABASE_FILE);
 
-        boolean result = inFileDatabase.exists(nonExistingInvoice.getId());
+        boolean result = inFileDatabase.exists(invoice.getId() + 1L);
 
-        verify(fileHelper).readLines(testPath);
         assertFalse(result);
+        verify(fileHelper).readLines(DATABASE_FILE);
     }
 
     @Test
@@ -218,12 +337,29 @@ class InFileDatabaseTest {
     }
 
     @Test
-    void shouldCountInvoices() throws IOException, DatabaseOperationException {
-        doReturn(List.of(objectMapper.writeValueAsString(invoiceInFile))).when(fileHelper).readLines(testPath);
+    void existsMethodShouldThrowExceptionWhenFileHelperThrowsException() throws IOException {
+        Invoice invoice = InvoiceGenerator.getRandomInvoice();
+        doThrow(IOException.class).when(fileHelper).readLines(DATABASE_FILE);
+
+        assertThrows(DatabaseOperationException.class, () -> inFileDatabase.exists(invoice.getId()));
+        verify(fileHelper).readLines(DATABASE_FILE);
+    }
+
+    @Test
+    void shouldReturnNumberOfInvoices() throws IOException, DatabaseOperationException {
+        doReturn(List.of(objectMapper.writeValueAsString(InvoiceGenerator.getRandomInvoice()), objectMapper.writeValueAsString(InvoiceGenerator.getRandomInvoice()))).when(fileHelper).readLines(DATABASE_FILE);
 
         long result = inFileDatabase.count();
 
-        verify(fileHelper).readLines(testPath);
-        assertEquals(1, result);
+        assertEquals(2, result);
+        verify(fileHelper).readLines(DATABASE_FILE);
+    }
+
+    @Test
+    void countMethodShouldThrowExceptionWhenFileHelperThrowsException() throws IOException {
+        doThrow(IOException.class).when(fileHelper).readLines(DATABASE_FILE);
+
+        assertThrows(DatabaseOperationException.class, () -> inFileDatabase.count());
+        verify(fileHelper).readLines(DATABASE_FILE);
     }
 }
